log4j + ajustes