@@ -3,7 +3,7 @@ package com.fileservice.features.salesman;
 import lombok.AllArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 
-import java.util.List;
+import java.util.Arrays;
 
 @AllArgsConstructor
 public class SalesmanService {
@@ -16,11 +16,11 @@ public class SalesmanService {
 
     public String amountOfSalesmen() {
         long count = salesmanData.getAll().stream()
-                .map(s -> List.of(StringUtils.splitByCharacterType(s.substring(4))).get(0))
+                .map(s -> Arrays.asList(StringUtils.splitByCharacterType(s.substring(4))).get(0))
                 .distinct()
                 .count();
 
-        return "The TOTAL AMOUNT OF SALESMEN inside de input directory is: ".concat(String.valueOf(count));
+        return "The TOTAL AMOUNT OF SALESMEN inside the input directory is: ".concat(String.valueOf(count));
     }
 
     public void clear() {
