@@ -4,6 +4,7 @@ import com.fileservice.features.DataEnum;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Triple;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,7 +20,7 @@ public class DataParser {
         String s2 = StringUtils.replace(s1, " ".concat(DataEnum.CUSTOMER.getId()), "/".concat(DataEnum.CUSTOMER.getId()));
         String s3 = StringUtils.replace(s2, " ".concat(DataEnum.SALE.getId()), "/".concat(DataEnum.SALE.getId()));
 
-        return List.of(StringUtils.split(s3, "/"));
+        return Arrays.asList(StringUtils.split(s3, "/"));
     }
 
     public static Triple<String, String, String> getSplitedSale(String sale) {
@@ -27,7 +28,7 @@ public class DataParser {
                 .replace(StringUtils
                         .replace(sale, "[", "/"), "]", "/");
 
-        List<String> split = List.of(StringUtils.split(replace, "/"));
+        List<String> split = Arrays.asList(StringUtils.split(replace, "/"));
 
         return Triple.of(getSaleId(sale), getSaleman(split), getItens(split));
     }
@@ -46,8 +47,8 @@ public class DataParser {
 
     public static List<List<String>> getSplitedItems(String items) {
 
-        List<String> split1 = List.of(StringUtils.split(items, ","));
+        List<String> split1 = Arrays.asList(StringUtils.split(items, ","));
 
-        return split1.stream().map(s -> List.of(StringUtils.split(s, "-"))).collect(Collectors.toList());
+        return split1.stream().map(s -> Arrays.asList(StringUtils.split(s, "-"))).collect(Collectors.toList());
     }
  }
